refactored to use a list for answers rather than a hashmap, all tests refactored and pass

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Welcome to the java trainer</h1>
-
+<a href="AllQuestions">List the questions in the database</a>
 
 </body>
 </html>
