--- a/src/main/resources/templates/editQuestion.html
+++ b/src/main/resources/templates/editQuestion.html
@@ -27,65 +27,53 @@
 			<p>
 				<label th:text=" 'enter answers A-D for this question ' "></label>
 			</p>
-		<!-- 	<p>
-				<input type="text" th:field="*{answers}" value="${answerId}" />
-			</p>
-		</div>
-		<input type="text" th:each="answer : ${answers}" th:id="answerId" th:text="${answer.answerText}"
-			th:value="${answer.answerId}" name="answers"  th:field="*{answers}" />
-			             
-			            
-			            
-			            
-
-		</div>
-  -->
-	
-			  <div th:each="answer, itemStat: *{answers}">
-                    <td><input th:field="*{answers[__${itemStat.index}__].answerText}"  th:value="${answer.getAnswerId()}" /></td>
-                            <input hidden th:name="|answers[${itemStat.index}].answerId|" th:value="${answer.getAnswerId()}"/>
-                </div>
-		
-		 
-		<div>
-			<p>
-				<label th:if="${correctAnswer} == null"
-					th:text="'Select the correct answer for this question'" /></label>
-			</p>
-			<p>
-				<select id="correctAnswer" name="correctAnswer"
-					th:value="${question.correctAnswer}"
-					th:selected="${question.correctAnswer}">
-					<option value="A">A</option>
-					<option value="B">B</option>
-					<option value="C">C</option>
-					<option value="D">D</option>
-				</select>
-			</p>
-		</div>
-
-		<div>
-			<p>
-				<label>select relevant tags</label>
-			<p>
-				<select id="tagId" multiple name="tags"
-					th:selected="${question.tags}">
-					<option th:each="tag : ${allTags}" th:value="${tag.tagId}"
-						th:text="${tag.name}"></option>
-				</select>
-			</p>
-		</div>
-
-		<div>
-			<p>
-				<button type="submit">Edit Question</button>
-			</p>
-		</div>
-	
-		<input type="hidden" th:field="*{questionId}" value="${questionId}" />
-		
 
 
+			<div th:each="answer, answerIndex: *{answers}">
+				<td><input
+					th:field="*{answers[__${answerIndex.index}__].answerText}"
+					th:value="${answer.getAnswerId()}" /></td> <input hidden
+					th:name="|answers[${answerIndex.index}].answerId|"
+					th:value="${answer.getAnswerId()}" />
+			</div>
+
+
+			<div>
+				<p>
+					<label th:if="${correctAnswer} == null"
+						th:text="'Select the correct answer for this question'" /></label>
+				</p>
+				<p>
+					<select id="correctAnswer" name="correctAnswer"
+						th:value="${question.correctAnswer}"
+						th:selected="${question.correctAnswer}">
+						<option value="A">A</option>
+						<option value="B">B</option>
+						<option value="C">C</option>
+						<option value="D">D</option>
+					</select>
+				</p>
+			</div>
+
+			<div>
+				<p>
+					<label>select relevant tags</label>
+				<p>
+					<select id="tagId" multiple name="tags"
+						th:selected="${question.tags}">
+						<option th:each="tag : ${allTags}" th:value="${tag.tagId}"
+							th:text="${tag.name}"></option>
+					</select>
+				</p>
+			</div>
+
+			<div>
+				<p>
+					<button type="submit">Edit Question</button>
+				</p>
+			</div>
+
+			<input type="hidden" th:field="*{questionId}" value="${questionId}" />
 	</form>
 </body>
 </html>
