--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,6 +7,6 @@
 <body>
 <h1>Welcome to the java trainer</h1>
 <a href="AllQuestions">List the questions in the database</a>
-
+<a href="AllNotApprovedQuestions">List the questions in the database</a>
 </body>
 </html>
