--- a/src/main/resources/templates/allNotApprovedQuestions.html
+++ b/src/main/resources/templates/allNotApprovedQuestions.html
@@ -14,14 +14,11 @@
 		<ul th:each="answer: ${question.answers}">
 			<li th:text="${answer.answerText}"></li>
 		</ul>
-		<p><a th:href="@{'EditQuestion/' + ${question.questionId} }">Edit this question</a>
+		<p><a th:href="@{'ApproveQuestion/' + ${question.questionId} }">Approve this question</a>
 	</div>
 
 
-	<div>
-		<a href="AddQuestion">Add a new question</a>
-	</div>
-
+	
 
 </body>
 </html>
