--- a/src/main/resources/templates/editQuestion.html
+++ b/src/main/resources/templates/editQuestion.html
@@ -5,7 +5,7 @@
 <title>Edit Question Details</title>
 </head>
 <body>
-
+<div th:insert="fragments/menu.html"></div>
 
 	<h1>Edit Question Details</h1>
 
