--- a/src/main/resources/templates/approveQuestion.html
+++ b/src/main/resources/templates/approveQuestion.html
@@ -2,78 +2,62 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Edit Question Details</title>
+<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
+<title>Approve question</title>
 </head>
 <body>
 
-
-	<h1>Approve this question</h1>
-
-
-	<form action="#" th:action="@{/ApproveQuestionSubmit}"
-		th:object="${question}" method="post">
-
+	<div class="container">
+		<div th:insert="fragments/menu.html"></div>
 		<div>
-			<p>
-				<label th:if="${questionText} == null"
-					th:text=" ' Edit your question'" /></label>
-			</p>
-			<p>
-				<input type="text" th:field="*{questionText}" />
-			</p>
+			<h1>Approve this question</h1>
 		</div>
 
-		<div>
-			<p>
-				<label th:text=" 'enter answers A-D for this question ' "></label>
-			</p>
+		<form action="#" th:action="@{/ApproveQuestionSubmit}"
+			th:object="${question}" method="post">
+
+			<div>
+				<label th:if="${questionText} == null"
+					th:text=" ' Question text'" /></label> 
+					<input type="text"
+					th:field="*{questionText}" />
+			</div>
+
+			<div>
+				<label th:text=" 'Trainee has given the following options for this question ' "></label>
+			</div>
 
 
 			<div th:each="answer, answerIndex: *{answers}">
-				<td><input
-					th:field="*{answers[__${answerIndex.index}__].answerText}"
-					th:value="${answer.getAnswerId()}" /></td> <input hidden
+				<input th:field="*{answers[__${answerIndex.index}__].answerText}"
+					th:value="${answer.getAnswerId()}" readonly /> <input type="hidden"
 					th:name="|answers[${answerIndex.index}].answerId|"
 					th:value="${answer.getAnswerId()}" />
 			</div>
 
 
 			<div>
-				<p>
-					<label th:if="${correctAnswer} == null"
-						th:text="'Select the correct answer for this question'" /></label>
-				</p>
-				<p>
-					<select id="correctAnswer" name="correctAnswer"
-						th:value="${question.correctAnswer}"
-						th:selected="${question.correctAnswer}">
-						<option value="A">A</option>
-						<option value="B">B</option>
-						<option value="C">C</option>
-						<option value="D">D</option>
-					</select>
-				</p>
+				<label th:if="${correctAnswer} == null"
+					th:text="'The trainee has set the following option for this question'"  /></label> <input
+					id="correctAnswer" name="correctAnswer"
+					th:value="${question.correctAnswer}"
+					th:selected="${question.correctAnswer}" readOnly >
 			</div>
 
 			<div>
-				<p>
-					<label>select relevant tags</label>
-				<p>
-					<select id="tagId" multiple name="tags"
-						th:selected="${question.tags}">
-						<option th:each="tag : ${allTags}" th:value="${tag.tagId}"
-							th:text="${tag.name}"></option>
-					</select>
-				</p>
+				<label>select relevant tags</label> <select id="tagId" multiple
+					name="tags" th:selected="${question.tags}">
+					<option th:each="tag : ${allTags}" th:value="${tag.tagId}"
+						th:text="${tag.name}"></option>
+				</select>
 			</div>
 
 			<div>
-				<p>
-					<button type="submit">Approve Question</button>
-				</p>
+				<button type="submit">Approve Question</button>
 			</div>
 
 			<input type="hidden" th:field="*{questionId}" value="${questionId}" />
-	</form>
+		</form>
+	</div>
 </body>
 </html>
