question now approved with one click rather than a separate form after clicking, started html clean up

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,16 +1,16 @@
 form {
-	width: 50%;
+	width: 75%;
 	margin: auto;
 }
 
 table {
-	width: 50%;
+	width: 75%;
 	margin: auto;
 	text-align: left;
 }
 
 table, th, td {
-	border: 1px solid #9966ff;
+	border: 1px solid #ccc;
 	border-collapse: collapse;
 }
 
