clean up of html adds add question link to nav bar and removes from list page

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -106,3 +106,29 @@ li a:hover {
 .error {
 	color: red;
 }
+
+.div-table {
+  display: table;         
+  width: 75%;
+  margin: 0 auto;
+  align-content: center;         
+  background-color: #eee;         
+  border: 1px solid #666666;         
+  border-spacing: 5px; /* cellspacing:poor IE support for  this */
+}
+.div-table-row {
+  display: table-row;
+  width: auto;
+  clear: both;
+}
+.div-table-col {
+  float: left; /* fix for  buggy browsers */
+  display: table-column;         
+  width: 200px;         
+  background-color: #ccc;  
+}
+
+.header {
+	  width: 50%;
+	margin: 0 auto;
+}
