--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -1,4 +1,5 @@
 <ul class="navBar">
 	<li><a th:href="@{/AllQuestions}">All questions</a></li>
 	<li><a th:href="@{/AllNotApprovedQuestions}">All questions that require approval</a></li>
+	<li><a href="/revise/AddQuestion">Add a new question</a></li>
 </ul>
