--- a/src/main/resources/templates/addQuestion.html
+++ b/src/main/resources/templates/addQuestion.html
@@ -9,63 +9,64 @@
 	<div class="container">
 		<div th:insert="fragments/menu.html"></div>
 
-		<div>
-			<h1>Add a new question</h1>
-		</div>
+		
 
 		<form action="#" th:action="@{/AddQuestionSubmit}"
 			th:object="${question}" method="post">
-			<table border="1">
-				<tr>
-					<td><label th:if="${questionText} == null"
-						th:text=" ' Add your question'" /></label></td>
-					<td><input type="text" th:field="*{questionText}" /></td>
-				</tr>
+			<fieldset>
+				<legend>Add a new Question:</legend>
+				<table >
+					<tr>
+						<td><label th:if="${questionText} == null"
+							th:text=" ' Add your question text'" /></label></td>
+						<td><input type="text" th:field="*{questionText}" /></td>
+					</tr>
 
-				<tr>
-					<td><label th:text=" 'enter answer A for this question ' "></label></td>
-					<td><input type="text" th:field="*{answers}" /></td>
-				</tr>
+					<tr>
+						<td><label th:text=" 'enter answer A for this question ' "></label></td>
+						<td><input type="text" th:field="*{answers}" /></td>
+					</tr>
 
-				<tr>
-					<td><label th:text=" 'enter answer B for this question ' "></label></td>
-					<td><input type="text" th:field="*{answers}" /></td>
-				</tr>
+					<tr>
+						<td><label th:text=" 'enter answer B for this question ' "></label></td>
+						<td><input type="text" th:field="*{answers}" /></td>
+					</tr>
 
-				<tr>
-					<td><label th:text=" 'enter answer C for this question ' "></label></td>
-					<td><input type="text" th:field="*{answers}" /></td>
-				</tr>
+					<tr>
+						<td><label th:text=" 'enter answer C for this question ' "></label></td>
+						<td><input type="text" th:field="*{answers}" /></td>
+					</tr>
 
-				<tr>
-					<td><label th:text=" 'enter answer D for this question ' "></label></td>
-					<td><input type="text" th:field="*{answers}" /></td>
-				</tr>
+					<tr>
+						<td><label th:text=" 'enter answer D for this question ' "></label></td>
+						<td><input type="text" th:field="*{answers}" /></td>
+					</tr>
 
-				<tr>
-					<td><label th:if="${correctAnswer} == null"
-						th:text="'Select the correct answer for this question'" /></label></td>
-					<td><select id="correctAnswer" name="correctAnswer">
-							<option value="A">A</option>
-							<option value="B">B</option>
-							<option value="C">C</option>
-							<option value="D">D</option>
-					</select></td>
-				</tr>
+					<tr>
+						<td><label th:if="${correctAnswer} == null"
+							th:text="'Select the correct answer for this question'" /></label></td>
+						<td><select id="correctAnswer" name="correctAnswer">
+								<option value="A">A</option>
+								<option value="B">B</option>
+								<option value="C">C</option>
+								<option value="D">D</option>
+						</select></td>
+					</tr>
 
-				<tr>
-					<td><label>select relevant tags</label>
-					<td><select id="tagId" multiple>
-							<option th:each="tag : ${allTags}" th:value="${tag.tagId}"
-								th:text="${tag.name}"></option>
-					</select></td>
-				</tr>
+					<tr>
+						<td><label>select relevant tags</label>
+						<td><select id="tagId" multiple>
+								<option th:each="tag : ${allTags}" th:value="${tag.tagId}"
+									th:text="${tag.name}"></option>
+						</select></td>
+					</tr>
 
-				<tr>
-					<td><button type="submit">Add Question</button></td>
-				</tr>
+					<tr>
+						<td><button type="submit">Add Question</button></td>
+					</tr>
 
-			</table>
+				</table>
+			</fieldset>
 		</form>
 	</div>
 </body>
